[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/bomb.png" type="Texture" id=1]
[ext_resource path="res://objects/bomb.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
resource_name = "Exploding"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:speed_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.01, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 56.5685

[sub_resource type="CircleShape2D" id=6]
radius = 104.0

[node name="Bomb" type="RigidBody2D"]
collision_layer = 0
collision_mask = 2
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
linear_damp = 1.5
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
speed_scale = 0.5
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Exploding = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_Bomb_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
